# personal_expense_tracker

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  SETUP.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_create_users_table.sql  002_create_categories_table.sql  003_create_expenses_table.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  routes.rs
backend/src/handlers/: categories.rs  expenses.rs  mod.rs  summaries.rs  users.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  style.css
frontend/src/: api.rs  lib.rs  models.rs
frontend/src/components/: auth.rs  dashboard.rs  expense_form.rs  mod.rs
instructions/: API_REFERENCE.md
