[package]
name = "expense-tracker-frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.5", features = ["http"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Storage"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.6", features = ["serde", "js"] }
console_error_panic_hook = "0.1"

# Charts
charming = { version = "0.3", features = ["wasm"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
